...
    <string name="campaign_launch_title">MySD</string>
    <string name="campaign_launch_body">Офлайн-кампания готова.</string>
    <string name="campaign_launch_kicker">Сигнал кампании / готово</string>
    <string name="campaign_launch_action_hint">Офлайн-маршрут готов</string>
    <string name="campaign_enter_action">Войти в кампанию</string>
    <string name="campaign_selection_title">Кампания</string>
    <string name="campaign_header_kicker">MYSD / ЛОКАЛЬНОЕ УПРАВЛЕНИЕ</string>
    <string name="campaign_header_body">Выберите маршрут и определите следующую экспедицию.</string>
    <string name="campaign_status_local">ЛОКАЛЬНО</string>
    <string name="campaign_level_label">ДОСТУПНЫЙ УРОВЕНЬ</string>
    <string name="campaign_level_marker">%1$d / %2$d</string>
    <string name="campaign_route_campaign">Кампания</string>
    <string name="campaign_route_troops">Войска</string>
    <string name="campaign_route_arena">Арена</string>
    <string name="campaign_shop_action">Магазин</string>
    <string name="campaign_tech_action">Технологии</string>
    <string name="campaign_roster_action">Открыть войска</string>
    <string name="campaign_arena_action">Открыть арену</string>
    <string name="arena_title">Локальная арена</string>
    <string name="arena_local_body">Сервис арены доступен в офлайн-режиме.</string>
    <string name="arena_blocked_body">Этот запрос арены заблокирован локальным контуром.</string>
    <string name="arena_match_body">Сетевые матчи и функции аккаунта недоступны.</string>
    <string name="arena_close_action">Закрыть арену</string>
    <string name="campaign_level_ember_path">Тропа углей</string>
    <string name="campaign_level_body">Доступный локальный уровень</string>
    <string name="campaign_level_setup_action">Подготовить уровень</string>
    <string name="campaign_level_setup_title">Подготовка уровня</string>
    <string name="campaign_new_setup_body">Этот локальный забег готов к доступной настройке.</string>
    <string name="campaign_unfinished_setup_body">Незавершённый локальный забег готов к продолжению.</string>
    <string name="campaign_unfinished_title">Незавершённый забег</string>
    <string name="campaign_unfinished_body">Локальный забег ожидает продолжения. Продолжите его или вернитесь к выбору кампании.</string>
    <string name="campaign_unfinished_panel_description">Панель продолжения незавершённого забега</string>
...
    <string name="battle_setup_selected">Выбрано: %1$s</string>
    <string name="battle_setup_continue_action">Продолжить подготовку</string>
    <string name="battle_setup_ready_body">Подготовка завершена, можно начинать.</string>
    <string name="battle_start_action">Начать бой</string>
    <string name="battle_started_title">Бой начат</string>
    <string name="battle_started_body">Переход к следующему этапу боя готов.</string>
    <string name="active_battle_title">Идёт бой</string>
    <string name="active_battle_stage">Этап: %1$s</string>
    <string name="active_battle_wave_activity">Активность волны</string>
    <string name="active_battle_base_visible">База «Угольное ядро» на поле</string>
    <string name="active_battle_enemies_visible">Враги «Пепельный бегун»: %1$d</string>
    <string name="active_battle_speed">Скорость: %1$s</string>
    <string name="active_battle_speed_default">стандартная</string>
    <string name="active_battle_speed_alternate">альтернативная</string>
    <string name="active_battle_pause_action">Поставить бой на паузу</string>
    <string name="active_battle_resume_action">Продолжить бой</string>
    <string name="active_battle_build_action">Выбрать постройку</string>
    <string name="active_battle_build_selected">Постройка выбрана</string>
    <string name="active_battle_enhancement_action">Открыть улучшения</string>
    <string name="active_battle_victory_action">Завершить бой</string>
    <string name="active_battle_resource">Ресурс: %1$d / %2$d</string>
    <string name="active_battle_wave">Волна: %1$d / %2$d</string>
    <string name="active_battle_base_health">База: %1$d / %2$d</string>
    <string name="active_battle_enemies_state">Враги на поле: %1$d</string>
    <string name="active_battle_paused">Бой на паузе</string>
...
